k8/backend.yml
# ── k8s/backend.yml ─────────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: studyvault
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rajeshgill634/studyvault-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: studyvault
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
